# rp2350-linux-setup-Pico_2_w

./: .gitignore  README.md
dev/blink/: CMakeLists.txt
dev/blink/src/: CMakeLists.txt  blink.c
examples/blink/src/: CMakeLists.txt  blink.c
examples/hello_world/: CMakeLists.txt
examples/hello_world/src/: CMakeLists.txt  helloworld.c
hw/: hw.h
hw/uart/: rpm_uart.c  rpm_uart.h
sw/: sw.h
